--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,15 @@
 <hr>
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
+    <p>
+    <form action="users" method="post">
+        <select name="userId">
+            <option value="1">userId=1</option>
+            <option value="2">userId=2</option>
+        </select>
+        <button type="submit">Выбрать</button>
+    </form>
+    </p>
     <li><a href="meals">Meals</a></li>
 </ul>
 </body>
